--- a/src/styles/components/Quiz.scss
+++ b/src/styles/components/Quiz.scss
@@ -196,7 +196,7 @@
 			color: white !important;
 		}
 
-		.pinyin-text {
+		.jyutping-text {
 			color: white !important;
 		}
 
@@ -227,7 +227,7 @@
 			color: white !important;
 		}
 
-		.pinyin-text {
+		.jyutping-text {
 			color: white !important;
 		}
 
@@ -289,7 +289,7 @@
 	}
 }
 
-.pinyin-text {
+.jyutping-text {
 	display: flex;
 	align-items: center;
 	justify-content: center;
@@ -630,7 +630,7 @@
 	text-align: center;
 }
 
-.table-pinyin {
+.table-jyutping {
 	font-size: 0.75rem;
 	font-style: italic;
 	color: #666;
